--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         }
     },
     "require-dev": {
+        "symfony/debug-bundle": "5.2.*",
         "symfony/maker-bundle": "^1.28"
     }
 }
